--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,12 @@
 	"observability": {
 		"enabled": true
 	}
+	,
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "ai": {"binding": "AI"}
+}
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -44,4 +50,4 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
-}
+
